--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.islami_app" >
+    package="com.example.islami_app">
 
     <application
         android:allowBackup="true"
@@ -12,22 +12,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ISLAMIAPP"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".home_activity"
+            android:name=".hadeeth.Hadeeth_Details_Activity"
             android:exported="false" />
         <activity
-            android:name=".splashActivity"
-            android:exported="true" >
+            android:name=".myactivities.home_activity"
+            android:exported="false" />
+        <activity
+            android:name=".myactivities.splashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Sura_detailsActivity"
-            android:exported="false"
-            />
+        <activity
+            android:name=".quran.Sura_detailsActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
